2006-09-03  Claes Nästén  <me{@}pekdon{.}net>

	* src/CmdDialog.cc (CmdDialog::bufKill): 
	Added kill to end of line to action CmdDialog named KILL.

2006-08-31  Claes Nästén  <me{@}pekdon{.}net>

	* src/Frame.cc (Frame): 
	Moved tagged frame information to Frame.

2006-08-30  Claes Nästén  <me{@}pekdon{.}net>

	* src/Frame.cc (Frame::setStateTitle): 
	Make custom set titles persist between restarts.

	* src/CfgParser.cc (CfgParser::Entry::free_tree): 
	Plug major memory leak in CfgParser.

	* src/PDecor.cc (PDecor::doMove): 
	Update moving to only use the root position of the pointer to support
	more ways of initiating moving and then also keep correct position.
	Close #94
	( Thanks Jowi and shared for reporting )

2006-08-28  Claes Nästén  <me{@}pekdon{.}net>

	* src/WindowManager.cc (WindowManager::updateMenus): 
	Fix issue in reload causing dangling pointer to custom menus hang
	around in the list of menus. Should improve on reload crash situation
	#92 and #96.

2006-08-23  Claes Nästén  <me{@}pekdon{.}net>

	* src/PDecor.cc (PDecor::TitleItem::updateVisible):
	Added info flag to title to store extra information in title such
	as marked state. Closing #47
	( Thanks shared for request )

2006-08-10  Claes Nästén  <me{@}pekdon{.}net>

	* src/PMenu.cc (PMenu::unmapSubmenus): 
	Moved dynamic flag to menu items in PMenu. Update unmap code to skip
	traversing down dynamic menus.

2006-08-01  Claes Nästén  <me{@}pekdon{.}net>

	* src/Atoms.cc (getLong): 
	Fix compile warnings.

	* src/PDecor.cc (PDecor::doMove): 
	Moved skip attribute to PDecor from Frame, adding check to skip those
	PDecor's when checking snap. Closing #95
	( Thanks shared for reporting )

2006-05-29  Claes Nästén  <me{@}pekdon{.}net>

	* src/Harbour.cc (setStateHidden): 
	Created new state action HarbourHidden. Closing #89

	* src/Theme.cc (load): 
	Removed ROOT command support. Closing #93
	( Thanks shared for reporting )
	
2006-05-01  Claes Nästén  <me{@}pekdon{.}net>
