@@ -113,7 +113,7 @@ enum MoveResizeActionType {
 
 enum CmdDialogAction {
     CMD_D_INSERT, CMD_D_REMOVE,
-    CMD_D_CLEAR, CMD_D_KILL, CMD_D_EXEC, CMD_D_CLOSE,
+    CMD_D_CLEAR, CMD_D_CLEARFROMCURSOR, CMD_D_EXEC, CMD_D_CLOSE,
     CMD_D_COMPLETE,
     CMD_D_CURS_NEXT, CMD_D_CURS_PREV,
     CMD_D_CURS_END, CMD_D_CURS_BEGIN,
